// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SaveAndPublish Renders and icon and default content when no children are supplied 1`] = `
<div>
  <ButtonLink
    data-id="action-save-and-publish"
  >
    <CheckCircleOutline />
    <span>
      Save and Publish
    </span>
  </ButtonLink>
</div>
`;

exports[`SaveAndPublish renders SaveAndPublish action 1`] = `
<div
  className="Foo"
>
  <ButtonLink
    data-id="action-save-and-publish"
  >
    <CheckCircleOutline />
    <span>
      Save and Publish
    </span>
  </ButtonLink>
</div>
`;
